--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "firebase": "^8.6.8",
     "imgbb": "^1.0.41",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
